# template_example

./: CMakeLists.txt  README.rst  README.template.rst
src/cxx/: CMakeLists.txt  ZZZZZZZZ.cpp
src/cxx/inputs/: arguments.cmake
src/fortran/: CMakeLists.txt  ZZZZZZZZ.F90  laplace_equation.F90  visualise.com
src/fortran/expected_results/: laplace_equation.part0.exelem  laplace_equation.part0.exnode  stdout.txt
src/fortran/inputs/: resource.txt
